# attendance-system-fastapi

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  RELEASE.md  build.py  main.py  models.py  phase8_concurrency_test.py  pyproject.toml  requirements.txt  smoke_test.py
.github/workflows/: package-all-os.yml
config/: courses.json
core/: config.py  constants.py  security.py
docs/: AGENTS.md  PLAN.md  PLAN_STATUS.md  google_sheets_setup.md
public/docs/: google_sheets_setup.html
public/scripts/: theme.js
public/student/: result.html  scan.html
public/styles/: main.css
public/teacher/: config.html  dashboard.html  index.html
routers/: student.py  teacher.py
services/: config_service.py  excel_service.py  google_sheets_service.py  qr_generator.py  session_manager.py  storage_factory.py
tests/: bootstrap_secret_test.py  conftest.py  dev_mode_api_test.py  phase8_concurrency_test.py  smoke_test.py  test_config_service.py  test_excel_service.py  test_qr_generator.py  test_session_manager.py  test_student_api.py  test_teacher_api.py
